# agent-traj-visualization

./: .gitattributes  .gitignore  README.md  llm_label_demo.ipynb  pyproject.toml  relationship_viewer.py  schema.txt  traceview.py
docs/: TraceView_Survey.csv  evaluation_instructions.md
evaluation_samples/: README.md  django__django-10924__eval_01_localization.traj  pylint-dev__pylint-6506__eval_04_fix.traj  pytest-dev__pytest-5692__eval_02_fix-and-test.traj  pytest-dev__pytest-8906__eval_03_failure-recovery.traj  sphinx-doc__sphinx-11445__eval_05_mixed.traj
reconstructed_autocoderover/: astropy__astropy-12907.txt  django__django-11099.txt  django__django-11133.txt  django__django-12470.txt  django__django-13315.txt  django__django-13448.txt  django__django-13551.txt  django__django-13660.txt  django__django-13710.txt  django__django-14580.txt  django__django-14752.txt  django__django-15498.txt  django__django-15789.txt  django__django-15814.txt  django__django-16041.txt  django__django-16046.txt  django__django-16139.txt  matplotlib__matplotlib-22835.txt  matplotlib__matplotlib-23913.txt  matplotlib__matplotlib-23964.txt  matplotlib__matplotlib-24149.txt  mwaskom__seaborn-3010.txt  mwaskom__seaborn-3190.txt  psf__requests-2148.txt  pydata__xarray-4094.txt  pydata__xarray-5131.txt  pytest-dev__pytest-5221.txt  pytest-dev__pytest-7432.txt  pytest-dev__pytest-8906.txt  scikit-learn__scikit-learn-13241.txt  scikit-learn__scikit-learn-13497.txt  scikit-learn__scikit-learn-25638.txt  sphinx-doc__sphinx-8713.txt  sympy__sympy-11870.txt  sympy__sympy-13915.txt  (+6 more)
(+193 files in other folders)
