[project]
name = "traceview"
version = "0.1.0"
description = "TraceView visualizes and labels step-by-step agent trajectories."
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.68.0",
    "ipykernel>=7.2.0",
    "jsonlines>=4.0.0",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "plotly>=6.5.2",
    "streamlit>=1.54.0",
    "streamlit-agraph>=0.0.45",
    "tqdm>=4.67.3",
]
